add, remove, update and reorder websites

--- a/src/data/websites.yml
+++ b/src/data/websites.yml
@@ -1,102 +1,74 @@
-####################
-# ADRIANNE PIECZONKA
-####################
+############
+# STEVE HAID
+############
 
 - title:
-    text: Adrianne Pieczonka
+    text: Steve Haid
 
   category: Website
 
   tags:
   - Website
-  - Design
   - Code
   
-  image: ../images/websites/adrianne-pieczonka.jpg
-  alt: Adrianne Pieczonka as Elisabeth in Don Carlos at the Gran Teatre del Liceu.
+  image: ../images/websites/steve-haid.jpg
+  alt: Toronto-based real estate agent Steve Haid.
 
-  link: https://www.adriannepieczonka.com
-
-  description: I worked with internationally-celebrated soprano Adrianne Pieczonka to create a bold new design to showcase her work.
-
-  details:
-  - name: Tools
-    value: Pug, Sass, JavaScript, Gulp, Git, Netlify
-
-###############
-# EGO FILM ARTS
-###############
-
-- title:
-    text: Ego Film Arts
-
-  category: Website
-
-  tags:
-  - Website
-  - Design
-  - Code
-
-  image: ../images/websites/atom-egoyan.jpg
-  alt: Atom Egoyan during a press conference in Stepanakert. Photo by Nagorno Karabakh.
-
-  link: http://www.egofilmarts.com/
-
-  description: I worked with Canadian film and stage director Atom Egoyan to create a minimal, clean website design for Ego&nbsp;Film&nbsp;Arts.
-
-  details:
-  - name: Tools
-    value: HTML, CSS, jQuery
-
-####################
-# ILEANA MONTALBETTI
-####################
-
-- title:
-    text: Ileana Montalbetti
-
-  category: Website
-
-  tags:
-  - Website
-  - Design
-  - Code
+  link: https://www.stevehaid.com/
   
-  image: ../images/websites/ileana-montalbetti.jpg
-  alt: Canadian soprano Ileana Montalbetti. Photo by Bo Huang.
-
-  link: https://www.ileanamontalbetti.com/
-
-  description: Ileana is a fabulous opera singer who was ready for a new website. We worked together to create an elegant design that reflects the beauty of her work.
-
+  description: I worked with designer Stephen Bell of <a href="http://coffeeshopcreative.ca" target="_blank" rel="noopener" class="link-inline">Coffeeshop Creative</a> to create an engaging marketing site for Toronto-based real estate agent Steve Haid.
+  
   details:
   - name: Tools
-    value: Pug, Sass, JavaScript, Git, Netlify
+    value: React, Gatsby, Styled Components, React Spring, XState, Git, Netlify
 
-#############
-# ADAM LUTHER
-#############
+###############
+# AZOOR SOCIETY
+###############
 
 - title:
-    text: Adam Luther
+    text: AZOOR Society
 
   category: Website
 
   tags:
   - Website
-  - Design
   - Code
 
-  image: ../images/websites/adam-luther.jpg
-  alt: Canadian tenor Adam Luther. Photo by Pierre Gautreau.
+  image: ../images/websites/azoor-society.png
+  alt: The AZOOR Society's logo, depicting an eye. Created by Stephen Bell.
 
-  link: https://www.adamluthertenor.com/
+  link: https://www.theazoorsociety.org
 
-  description: Adam was ready for an updated website. We created a stark, modern look that reflects the drama of this opera singer's live performances.
+  description: I collaborated with designer Stephen Bell of <a href="http://coffeeshopcreative.ca" target="_blank" rel="noopener" class="link-inline">Coffeeshop Creative</a> to build a colourful, user-friendly website for The AZOOR Society, a UK-based charity committed to promoting awareness of Acute Zonal Occult Outer Retinopathy.
+  
+  details:
+  - name: Tools
+    value: React, Gatsby, React Spring, PostCSS, Git, Netlify
+
+###############
+# ALISON MORITZ
+###############
+
+- title:
+    text: Alison Moritz
+
+  category: Website
+
+  tags:
+  - Website
+  - Code
+
+  image: ../images/websites/alison-moritz.jpg
+  alt: American stage director Alison Moritz.
+
+  link: https://www.alisonmoritz.com
+
+  description: I worked with designer Stephen Bell of <a href="http://coffeeshopcreative.ca" target="_blank" rel="noopener" class="link-inline">Coffeeshop Creative</a> to build a bold, vibrant portfolio highlighting the recent work of American stage director Alison Moritz.
 
   details:
   - name: Tools
-    value: Pug, Sass, JavaScript, Git, Netlify
+    value: React, Gatsby, Styled Components, React Spring, XState, Git, Netlify
 
 ####################
 # J. PATRICK RAFTERY
@@ -126,32 +98,94 @@
 
   details:
   - name: Tools
-    value: React, Gatsby, PostCSS, Git, Netlify
+    value: React, Gatsby, PostCSS, GSAP, Git, Netlify
 
-##############
-# LAURA ALBINO
-##############
+#############
+# ALAINA VIAU
+#############
 
 - title:
-    text: Laura Albino
+    text: Alaina Viau
 
   category: Website
 
   tags:
   - Website
-  - Design
   - Code
-  
-  image: ../images/websites/laura-albino.jpg
-  alt: Canadian soprano Laura Albino. Photo by Katie Cross Photography.
 
-  link: https://www.lauraalbino.com/
+  image: ../images/websites/alaina-viau-2.jpg
+  alt: Canadian director Alaina Viau.
 
-  description: Laura is an opera singer who wanted a new website for her European audition tour. Together, we created a fresh, vibrant design to highlight her portfolio.
+  link: https://www.alainaviau.com
+
+  reviews:
+  - quotation: Thank you for the wonderful platform and for making my work look so great!!
+    source: Alaina Viau, Facebook
+    link: https://www.facebook.com/alaina.viau.3/posts/10101533952315009
+
+  description: I partnered with designer Stephen Bell of <a href="http://coffeeshopcreative.ca" target="_blank" rel="noopener" class="link-inline">Coffeeshop Creative</a> to build a comprehensive portfolio showcasing the work of Canadian opera director, creator, and producer Alaina Viau.
+
+  details:
+  - name: Tools
+    value: React, Gatsby, Styled Components, XState, Git, Netlify
+
+###################
+# POMEGRANATE OPERA
+###################
+
+- title:
+    text: Pomegranate Opera
+
+  category: Website
+
+  tags:
+  - Website
+  - Code
+
+  image: ../images/websites/satyr-and-maenad.jpg
+  alt: A fresco of Satyr and Maenad from the Casa di Caecilius Jucundus in Pompeii that inspired "Pomegranate Opera".
+
+  link: https://www.pomegranateopera.com
+
+  reviews:
+  - quotation: 'Our fantastic website was made by the team at <a href="https://twitter.com/coffeescreative" target="_blank" rel="noopener" class="link-inline">@coffeescreative</a> right here in Toronto! Designers and developers who are also <a href="https://twitter.com/hashtag/operasingers?src=hash" target="_blank" rel="noopener" class="link-inline">#operasingers</a>! Thanks <a href="https://twitter.com/Sbelltenor" target="_blank" rel="noopener" class="link-inline">@Sbelltenor</a> <a href="https://twitter.com/ooloth" target="_blank" rel="noopener" class="link-inline">@ooloth</a> <a href="https://twitter.com/teiyakasahara" target="_blank" rel="noopener" class="link-inline">@teiyakasahara</a>.'
+    source: Pomegranate Opera, Twitter
+    link: https://twitter.com/pomopera/status/1039923201533505537?s=12
+
+  description: I worked with designer Stephen Bell of <a href="http://coffeeshopcreative.ca" target="_blank" rel="noopener" class="link-inline">Coffeeshop Creative</a> to build a whimsical showcase for the upcoming production of "Pomegranate Opera", a lesbian opera by Amanda Hale and Kye Marshall.
   
   details:
   - name: Tools
-    value: Pug, Sass, JavaScript, Git, Netlify
+    value: React, Gatsby, PostCSS, GSAP, Git, Netlify
+
+################
+# ASHLEY THOURET
+################
+
+- title:
+    text: Ashley Thouret
+
+  category: Website
+
+  tags:
+  - Website
+  - Code
+
+  image: ../images/websites/ashley-thouret.jpg
+  alt: Canadian soprano Ashley Thouret. Photo by Dario Acosta.
+
+  link: https://www.ashleythouret.com
+
+  reviews:
+  - quotation: THANK YOU <a href="https://twitter.com/coffeescreative" target="_blank" rel="noopener" class="link-inline">@coffeescreative</a> for the beautiful website redesign!!!
+    source: Ashley Thouret, Twitter
+    link: https://twitter.com/AshleyThouret/status/1073219939278995456
+
+  description: I collaborated with designer Stephen Bell of <a href="http://coffeeshopcreative.ca" target="_blank" rel="noopener" class="link-inline">Coffeeshop Creative</a> to build an elegant portfolio site for Canadian soprano Ashley Thouret.
+  
+  details:
+  - name: Tools
+    value: React, Gatsby, PostCSS, Git, Netlify
 
 ########################
 # UP & RUNNING TUTORIALS
@@ -214,30 +248,6 @@
   - name: Tools
     value: React, Gatsby, PostCSS, Git, Netlify
 
-############
-# Steve Haid
-############
-
-- title:
-    text: Steve Haid
-
-  category: Website
-
-  tags:
-  - Website
-  - Code
-  
-  image: ../images/websites/steve-haid.jpg
-  alt: Toronto-based real estate agent Steve Haid.
-
-  link: https://www.stevehaid.com/
-  
-  description: I worked with designer Stephen Bell of <a href="http://coffeeshopcreative.ca" target="_blank" rel="noopener" class="link-inline">Coffeeshop Creative</a> to create an engaging marketing site for Toronto-based real estate agent Steve Haid.
-  
-  details:
-  - name: Tools
-    value: React, Gatsby, Styled Components, Git, Netlify
-
 ##############
 # ARIA UMEZAWA
 ##############
@@ -268,84 +278,7 @@
   
   details:
   - name: Tools
-    value: React, Gatsby, PostCSS, Git, Netlify
-
-###############
-# AZOOR SOCIETY
-###############
-
-- title:
-    text: AZOOR Society
-
-  category: Website
-
-  tags:
-  - Website
-  - Code
-
-  image: ../images/websites/azoor-society.png
-  alt: The AZOOR Society's logo, depicting an eye. Created by Stephen Bell.
-
-  link: https://www.theazoorsociety.org
-
-  description: I collaborated with designer Stephen Bell of <a href="http://coffeeshopcreative.ca" target="_blank" rel="noopener" class="link-inline">Coffeeshop Creative</a> to build a colourful, user-friendly website for The AZOOR Society, a UK-based charity committed to promoting awareness of Acute Zonal Occult Outer Retinopathy.
-  
-  details:
-  - name: Tools
-    value: React, Gatsby, React Spring, PostCSS, Git, Netlify
-
-################
-# ASHLEY THOURET
-################
-
-- title:
-    text: Ashley Thouret
-
-  category: Website
-
-  tags:
-  - Website
-  - Code
-
-  image: ../images/websites/ashley-thouret.jpg
-  alt: Canadian soprano Ashley Thouret. Photo by Dario Acosta.
-
-  link: https://www.ashleythouret.com
-
-  reviews:
-  - quotation: THANK YOU <a href="https://twitter.com/coffeescreative" target="_blank" rel="noopener" class="link-inline">@coffeescreative</a> for the beautiful website redesign!!!
-    source: Ashley Thouret, Twitter
-    link: https://twitter.com/AshleyThouret/status/1073219939278995456
-
-  description: I collaborated with designer Stephen Bell of <a href="http://coffeeshopcreative.ca" target="_blank" rel="noopener" class="link-inline">Coffeeshop Creative</a> to build an elegant portfolio site for Canadian soprano Ashley Thouret.
-  
-  details:
-  - name: Tools
-    value: React, Gatsby, PostCSS, Git, Netlify
-
-###############
-# PETER BARRETT
-###############
-
-- title:
-    text: Peter Barrett
-
-  category: Website
-
-  tags:
-  - Website
-  - Code
-
-  image: ../images/websites/peter-barrett.jpg
-  alt: Canadian baritone Peter Barrett. Photo by Bo Huang.
-
-  link: https://www.peterbarrett.ca
-
-  description: I worked with designer Stephen Bell of <a href="http://coffeeshopcreative.ca" target="_blank" rel="noopener" class="link-inline">Coffeeshop Creative</a> to build a clean, fast-loading portfolio site for Canadian baritone Peter Barrett.
-  
-  details:
-  - name: Tools
-    value: React, Gatsby, PostCSS, Git, Netlify
+    value: React, Gatsby, PostCSS, GSAP, Git, Netlify
 
 #####################
 # KINGS VALLEY PAVING
@@ -374,36 +307,7 @@
   
   details:
   - name: Tools
-    value: React, Gatsby, PostCSS, Git, Netlify
-
-###################
-# POMEGRANATE OPERA
-###################
-
-- title:
-    text: Pomegranate Opera
-
-  category: Website
-
-  tags:
-  - Website
-  - Code
-
-  image: ../images/websites/satyr-and-maenad.jpg
-  alt: A fresco of Satyr and Maenad from the Casa di Caecilius Jucundus in Pompeii that inspired "Pomegranate Opera".
-
-  link: https://www.pomegranateopera.com
-
-  reviews:
-  - quotation: 'Our fantastic website was made by the team at <a href="https://twitter.com/coffeescreative" target="_blank" rel="noopener" class="link-inline">@coffeescreative</a> right here in Toronto! Designers and developers who are also <a href="https://twitter.com/hashtag/operasingers?src=hash" target="_blank" rel="noopener" class="link-inline">#operasingers</a>! Thanks <a href="https://twitter.com/Sbelltenor" target="_blank" rel="noopener" class="link-inline">@Sbelltenor</a> <a href="https://twitter.com/ooloth" target="_blank" rel="noopener" class="link-inline">@ooloth</a> <a href="https://twitter.com/teiyakasahara" target="_blank" rel="noopener" class="link-inline">@teiyakasahara</a>.'
-    source: Pomegranate Opera, Twitter
-    link: https://twitter.com/pomopera/status/1039923201533505537?s=12
-
-  description: I worked with designer Stephen Bell of <a href="http://coffeeshopcreative.ca" target="_blank" rel="noopener" class="link-inline">Coffeeshop Creative</a> to build a whimsical showcase for the upcoming production of "Pomegranate Opera", a lesbian opera by Amanda Hale and Kye Marshall.
-  
-  details:
-  - name: Tools
-    value: React, Gatsby, PostCSS, Git, Netlify
+    value: React, Gatsby, PostCSS, GSAP, Git, Netlify
 
 ###############
 # DANIEL CABENA
@@ -432,7 +336,180 @@
   
   details:
   - name: Tools
-    value: React, Gatsby, PostCSS, Git, Netlify
+    value: React, Gatsby, PostCSS, GSAP, Git, Netlify
+
+#########
+# DG VOLO
+#########
+
+- title:
+    text: DG Volo & Company
+
+  category: Website
+
+  tags:
+  - Website
+  - Code
+
+  image: ../images/websites/david-woloviec.jpg
+  alt: David Woloviec, founder of DG Volo & Company.
+
+  link: https://www.dgvolo.com
+
+  description: I partnered with designer Stephen Bell of <a href="http://coffeeshopcreative.ca" target="_blank" rel="noopener" class="link-inline">Coffeeshop Creative</a> to build a crisp, multi-page business site for DG Volo & Company, a Toronto-based investment consultancy.
+
+  details:
+  - name: Tools
+    value: React, Gatsby, PostCSS, GSAP, Git, Netlify
+
+###############
+# PETER BARRETT
+###############
+
+- title:
+    text: Peter Barrett
+
+  category: Website
+
+  tags:
+  - Website
+  - Code
+
+  image: ../images/websites/peter-barrett.jpg
+  alt: Canadian baritone Peter Barrett. Photo by Bo Huang.
+
+  link: https://www.peterbarrett.ca
+
+  description: I worked with designer Stephen Bell of <a href="http://coffeeshopcreative.ca" target="_blank" rel="noopener" class="link-inline">Coffeeshop Creative</a> to build a clean, fast-loading portfolio site for Canadian baritone Peter Barrett.
+  
+  details:
+  - name: Tools
+    value: React, Gatsby, PostCSS, GSAP, Git, Netlify
+
+####################
+# ADRIANNE PIECZONKA
+####################
+
+- title:
+    text: Adrianne Pieczonka
+
+  category: Website
+
+  tags:
+  - Website
+  - Design
+  - Code
+  
+  image: ../images/websites/adrianne-pieczonka.jpg
+  alt: Adrianne Pieczonka as Elisabeth in Don Carlos at the Gran Teatre del Liceu.
+
+  link: https://www.adriannepieczonka.com
+
+  description: I worked with internationally-celebrated soprano Adrianne Pieczonka to create a bold new design to showcase her work.
+
+  details:
+  - name: Tools
+    value: Pug, Sass, JavaScript, GSAP, Gulp, Git, Netlify
+
+###############
+# EGO FILM ARTS
+###############
+
+- title:
+    text: Ego Film Arts
+
+  category: Website
+
+  tags:
+  - Website
+  - Design
+  - Code
+
+  image: ../images/websites/atom-egoyan.jpg
+  alt: Atom Egoyan during a press conference in Stepanakert. Photo by Nagorno Karabakh.
+
+  link: http://www.egofilmarts.com/
+
+  description: I worked with Canadian film and stage director Atom Egoyan to create a minimal, clean website design for Ego&nbsp;Film&nbsp;Arts.
+
+  details:
+  - name: Tools
+    value: HTML, CSS, jQuery
+
+####################
+# ILEANA MONTALBETTI
+####################
+
+- title:
+    text: Ileana Montalbetti
+
+  category: Website
+
+  tags:
+  - Website
+  - Design
+  - Code
+  
+  image: ../images/websites/ileana-montalbetti.jpg
+  alt: Canadian soprano Ileana Montalbetti. Photo by Bo Huang.
+
+  link: https://www.ileanamontalbetti.com/
+
+  description: Ileana is a fabulous opera singer who was ready for a new website. We worked together to create an elegant design that reflects the beauty of her work.
+
+  details:
+  - name: Tools
+    value: Pug, Sass, JavaScript, Scroll Reveal, Git, Netlify
+
+#############
+# ADAM LUTHER
+#############
+
+- title:
+    text: Adam Luther
+
+  category: Website
+
+  tags:
+  - Website
+  - Design
+  - Code
+
+  image: ../images/websites/adam-luther.jpg
+  alt: Canadian tenor Adam Luther. Photo by Pierre Gautreau.
+
+  link: https://www.adamluthertenor.com/
+
+  description: Adam was ready for an updated website. We created a stark, modern look that reflects the drama of this opera singer's live performances.
+
+  details:
+  - name: Tools
+    value: Pug, Sass, JavaScript, Scroll Reveal, Git, Netlify
+
+##############
+# LAURA ALBINO
+##############
+
+- title:
+    text: Laura Albino
+
+  category: Website
+
+  tags:
+  - Website
+  - Design
+  - Code
+  
+  image: ../images/websites/laura-albino.jpg
+  alt: Canadian soprano Laura Albino. Photo by Katie Cross Photography.
+
+  link: https://www.lauraalbino.com/
+
+  description: Laura is an opera singer who wanted a new website for her European audition tour. Together, we created a fresh, vibrant design to highlight her portfolio.
+  
+  details:
+  - name: Tools
+    value: Pug, Sass, JavaScript, Scroll Reveal, Git, Netlify
 
 ##############
 # SHAWNA LUCEY
@@ -461,31 +538,7 @@
 
   details:
   - name: Tools
-    value: React, Gatsby, PostCSS, Git, Netlify
-
-#########
-# DG VOLO
-#########
-
-- title:
-    text: DG Volo & Company
-
-  category: Website
-
-  tags:
-  - Website
-  - Code
-
-  image: ../images/websites/david-woloviec.jpg
-  alt: David Woloviec, founder of DG Volo & Company.
-
-  link: https://www.dgvolo.com
-
-  description: I partnered with designer Stephen Bell of <a href="http://coffeeshopcreative.ca" target="_blank" rel="noopener" class="link-inline">Coffeeshop Creative</a> to build a crisp, multi-page business site for DG Volo & Company, a Toronto-based investment consultancy.
-
-  details:
-  - name: Tools
-    value: React, Gatsby, PostCSS, Git, Netlify
+    value: React, Gatsby, PostCSS, GSAP, Git, Netlify
 
 ##################
 # HOME CARE QUOTES
@@ -533,28 +586,4 @@
   
   details:
   - name: Tools
-    value: React, Gatsby, PostCSS, Git, Netlify
-
-###################
-# RICCARDO IANNELLO
-###################
-
-- title:
-    text: Riccardo Iannello
-
-  category: Website
-
-  tags:
-  - Website
-  - Code
-  
-  image: ../images/websites/riccardo-iannello-2.jpg
-  alt: Italian-Canadian tenor Riccardo Iannello. Photo by Phil Crozier.
-
-  link: http://www.riccardoiannello.com
-
-  description: I partnered with designer Stephen Bell of <a href="http://coffeeshopcreative.ca" target="_blank" rel="noopener" class="link-inline">Coffeeshop Creative</a> to build an engaging one-page portfolio site for Italian-Canadian tenor Riccardo Iannello.
-  
-  details:
-  - name: Tools
-    value: Pug, Sass, jQuery
+    value: React, Gatsby, PostCSS, GSAP, Git, Netlify
