--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,5 @@ public/
 .DS_Store
 yarn-error.log
 
-# Firebase config
-.env.development
-.env.production
+# dotenv environment variables file
+.env
