--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@babel/plugin-transform-react-constant-elements": "^7.2.0",
     "@svgr/webpack": "^4.3.0",
     "autoprefixer": "^9.5.1",
+    "dotenv": "^8.0.0",
     "gatsby": "^2.8.2",
     "gatsby-cli": "^2.6.4",
     "gatsby-image": "^2.1.2",
