--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "gatsby": "^2.8.2",
     "gatsby-cli": "^2.6.4",
     "gatsby-image": "^2.1.2",
+    "gatsby-plugin-google-analytics": "^2.1.4",
     "gatsby-plugin-manifest": "^2.1.1",
     "gatsby-plugin-netlify": "^2.0.17",
     "gatsby-plugin-netlify-cache": "^1.2.0",
